added a new report call_lengths, and also added filter info on top of each report

--- a/application/app/views/report/call_day_distribution.html.erb
+++ b/application/app/views/report/call_day_distribution.html.erb
@@ -29,7 +29,7 @@
       </legend>
       <table cellspacing="0" width="100%">
         <tr>
-          <%= "Filter Info: Grouping - #{@grouping.capitalize}, Staff Name - #{@staff.capitalize}, Call Status - #{@call_status}, Call Type - #{@call_type}"  %>
+          <%= "Filter Info: Grouping - #{@grouping.capitalize}, Staff Name - #{@staff.capitalize}, Call Status - #{@call_status}, Call Type - #{@call_type}-- (#{@special_message}) "  %>
         </tr>
         <tr>
           <td width="30%" colspan = 2 class="celltop cellleft cellbottom main-table-cell" style="font-weight: bold; text-align:right;">
