--- a/application/app/views/report/patient_age_distribution_report.html.erb
+++ b/application/app/views/report/patient_age_distribution_report.html.erb
@@ -29,6 +29,9 @@
       </legend>
       <table cellspacing="0" width="100%">
         <tr>
+          <%= "Filter Info: Grouping - #{@grouping.capitalize} #{@special_message} " %>
+        </tr>
+        <tr>
           <td width="60%" class="celltop cellleft cellbottom main-table-cell" style="font-weight: bold;">
             &nbsp;
           </td>
