--- a/application/app/views/report/patient_activity_report.html.erb
+++ b/application/app/views/report/patient_activity_report.html.erb
@@ -29,6 +29,9 @@
       </legend>
       <table cellspacing="0" width="100%">
         <tr>
+          <%= "Filter Info: Grouping - #{@grouping.capitalize} #{@special_message} "  %>
+        </tr>
+        <tr>
           <td width="58%" colspan = 2 class="celltop cellleft cellbottom main-table-cell" style="font-weight: bold; text-align:right;">
               Total Callers
           </td>
