--- a/application/app/views/report/patient_analysis_selection.html.erb
+++ b/application/app/views/report/patient_analysis_selection.html.erb
@@ -14,24 +14,45 @@
 <form method='POST' action="reports" >
   
   <%= select_tag :report_date_range, options_for_select(@date_range_values),
-      {:helpText => "Select Date Range", :tt_onUnLoad=>"setDateRange('report_date_range');"} %>
+      {:helpText => "Select Date Range",
+       :tt_onUnLoad=>"setDateRange('report_date_range');"} %>
 
-  <%= select_tag :patient_type, options_for_select(@patient_type), {:helpText => "Select Patient Type"} %>
-
-  <%= select_tag :grouping,     options_for_select(@grouping), {:helpText => "Select Grouping Criterion"} %>
+  <% if @report_type.downcase != 'tips' %>
+    <%= select_tag :patient_type, options_for_select(@patient_type),
+                {:helpText => "Select Patient Type"} %>
+  <% end %>
+    
+  <%= select_tag :grouping,     options_for_select(@grouping),
+              {:helpText => "Select Grouping Criterion"} %>
 
   <%if @query == "health_issues"%>
-    <%= select_tag :health_task, options_for_select(@health_task), {:helpText => "Select Health Task"} %>
+    <%= select_tag :health_task, options_for_select(@health_task),
+                {:helpText => "Select Health Task"} %>
   <%end%>
 
   <%if @query == "referral_followup"%>
-    <%= select_tag :outcome, options_for_select(@outcomes), {:helpText => "Select Outcome"} %>
+    <%= select_tag :outcome, options_for_select(@outcomes),
+                {:helpText => "Select Outcome"} %>
   <%end%>
 
   <% if @report_type.downcase == 'call_analysis' %>
-    <%= select_tag :staff_member,     options_for_select(@staff), {:helpText => "Select a Staff member to report on"} %>
-    <%= select_tag :call_type,     options_for_select(@call_type), {:helpText => "Select Call type"} %>
-    <%= select_tag :call_status,     options_for_select(@call_status), {:helpText => "Select Call Status (dropped or not)"} %>
+    <%= select_tag :staff_member,     options_for_select(@staff),
+                {:helpText => "Select a Staff member to report on"} %>
+    <%= select_tag :call_type,     options_for_select(@call_type),
+                {:helpText => "Select Call type"} %>
+    <%= select_tag :call_status,     options_for_select(@call_status),
+                {:helpText => "Select Call Status (dropped or not)"} %>
+  <% elsif @report_type.downcase == 'tips' %>
+    <%= select_tag :content_type,     options_for_select(@content_type),
+                {:helpText => "Select the Content to report on"} %>
+    <%= select_tag :language,     options_for_select(@language),
+                {:helpText => "Select the language to report on"} %>
+    <%= select_tag :phone_type,     options_for_select(@phone_type),
+                {:helpText => "Select Phone type"} %>
+    <%= select_tag :delivery,     options_for_select(@delivery),
+                {:helpText => "Select tips delivery method"} %>
+    <%= select_tag :network_prefix,     options_for_select(@network_prefix),
+                {:helpText => "Select the number prefix"} %>
   <% end %>
 
   <%= hidden_field_tag :query, "#{@query}"%>
