--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -55,6 +55,7 @@
     <option value='/encounters/new/outcome?patient_id=<%=@patient.id%>'>Outcome</option>
     <option value='/clinic/schedules?patient_id=<%=@patient.id%>&source_url=patient_dashboard'>Clinic Schedules</option>
     <option value='/encounters/new/tips_and_reminders?patient_id=<%=@patient.id%>'>Tips and Reminders</option>
+    <option value='/patients/demographics?patient_id=<%=@patient.id%>'>Edit Demograghics</option>
     <option value='/clinic/call?task=next'>Next Client</option>
   </select>
 </div>
