added 'Find by phone' feature on main dashboard

--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -20,6 +20,7 @@
     <option value="" ttSize="190px">Find by Name</option>
     <option value="/people/find_by_national_id" ttSize="190px">Find by ID</option>
     <option value="/clinic/emergencycall" ttSize="200px">Emergency Call</option>
+    <option value="/people/find_by_phone" ttSize="200px">Find by phone</option>
   </select>
 </div>
 
