--- a/application/app/views/patients/show.rhtml
+++ b/application/app/views/patients/show.rhtml
@@ -56,6 +56,7 @@
     <option value='/clinic/schedules?patient_id=<%=@patient.id%>&source_url=patient_dashboard'>Clinic Schedules</option>
     <option value='/encounters/new/tips_and_reminders?patient_id=<%=@patient.id%>'>Tips and Reminders</option>
     <option value='/patients/demographics?patient_id=<%=@patient.id%>'>Edit Demograghics</option>
+    <option value='/encounters/recent_tip_and_reminder_program?patient_id=<%=@patient.id%>'>Edit Tip & Reminder</option>
     <option value='/clinic/call?task=next'>Next Client</option>
   </select>
 </div>
