added a condition on 'Referral reason' not to show referral reason if outcome is 'Given advice no referral needed'

--- a/application/app/views/encounters/outcome.rhtml
+++ b/application/app/views/encounters/outcome.rhtml
@@ -48,6 +48,7 @@
     :ajaxURL => '/encounters/referral_reasons',
     :optional => true,
     :allowFreeText => true,
+    :condition    => "$('select_outcome').value != 'GIVEN ADVICE NO REFERRAL NEEDED'",
     :helpText => 'Referral reason'} %>
 
   <%unless @encounter_id.nil?%>
